feat: LED测试基础代码框架

--- a/electirc_vehicle/Project/Objects/lks07x_Project.build_log.htm
+++ b/electirc_vehicle/Project/Objects/lks07x_Project.build_log.htm
@@ -17,7 +17,7 @@ Library Manager: ArmAr.exe V5.06 update 7 (build 960)
 Hex Converter:   FromElf.exe V5.06 update 7 (build 960)
 CPU DLL:         SARMCM3.DLL V5.36.0.0
 Dialog DLL:      DARMCM1.DLL V1.19.4.0
-Target DLL:      UL2CM3.DLL V1.164.0.0
+Target DLL:      Segger\JL2CM3.dll V2.99.40.0
 Dialog DLL:      TARMCM1.DLL V1.14.4.0
  
 <h2>Project:</h2>
@@ -27,6 +27,11 @@ Project File Date:  10/07/2025
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'D:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Lks_07x'
+compiling main.c...
+compiling hardware_init.c...
+linking...
+Program Size: Code=668 RO-data=208 RW-data=0 ZI-data=1024  
+FromELF: creating hex file...
 ".\Objects\lks07x_Project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -50,7 +55,7 @@ Package Vendor: Linko
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.5.0
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
