--- a/electirc_vehicle/MDK-ARM/Objects/lks07x_Project.build_log.htm
+++ b/electirc_vehicle/MDK-ARM/Objects/lks07x_Project.build_log.htm
@@ -21,16 +21,45 @@ Target DLL:      Segger\JL2CM3.dll V2.99.40.0
 Dialog DLL:      TARMCM1.DLL V1.14.4.0
  
 <h2>Project:</h2>
-D:\Code_Src\Github\electric_vehicle\electirc_vehicle\Project\mc_07x.uvprojx
-Project File Date:  10/07/2025
+D:\Code_Src\Github\Electric_vehicle\electirc_vehicle\MDK-ARM\mc_07x.uvprojx
+Project File Date:  10/19/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'D:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Lks_07x'
+compiling lks32mc07x_adc.c...
+compiling lks32mc07x_qep.c...
+compiling lks32mc07x_mcpwm.c...
+compiling lks32mc07x_gpio.c...
+compiling lks32mc07x_exti.c...
+compiling lks32mc07x_cmp.c...
+compiling lks32mc07x_opa.c...
+compiling lks32mc07x_hall.c...
+compiling lks32mc07x_dsp.c...
+compiling lks32mc07x_dac.c...
+compiling lks32mc07x_dma.c...
+compiling lks32mc07x_can.c...
+compiling lks32MC07x_flash.c...
+assembling startup_lks32mc07x.s...
+compiling lks32mc07x_sif.c...
+compiling mc_math.c...
+compiling lks32mc07x_sys.c...
+compiling pid_regulators.c...
+compiling lks32mc07x_tmp.c...
+compiling lks32mc07x_tim.c...
+compiling lks32mc07x_wake.c...
+compiling lks32mc07x_uart.c...
+compiling interrupt.c...
 compiling main.c...
 compiling hardware_init.c...
+compiling global_variable.c...
+compiling state_machine.c...
+compiling SEGGER_RTT_printf.c...
+compiling SEGGER_RTT.c...
+compiling task_scheduler.c...
+compiling foc_drive.c...
 linking...
-Program Size: Code=668 RO-data=208 RW-data=0 ZI-data=1024  
+Program Size: Code=792 RO-data=208 RW-data=0 ZI-data=1024  
 FromELF: creating hex file...
 ".\Objects\lks07x_Project.axf" - 0 Error(s), 0 Warning(s).
 
@@ -55,7 +84,7 @@ Package Vendor: Linko
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.5.0
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
