--- a/electirc_vehicle/MDK-ARM/Objects/lks07x_Project.build_log.htm
+++ b/electirc_vehicle/MDK-ARM/Objects/lks07x_Project.build_log.htm
@@ -22,11 +22,15 @@ Dialog DLL:      TARMCM1.DLL V1.14.4.0
  
 <h2>Project:</h2>
 D:\Code_Src\Github\Electric_vehicle\electirc_vehicle\MDK-ARM\mc_07x.uvprojx
-Project File Date:  10/23/2025
+Project File Date:  10/31/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'D:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Lks_07x'
+compiling mc_math.c...
+linking...
+Program Size: Code=6868 RO-data=224 RW-data=8 ZI-data=1216  
+FromELF: creating hex file...
 ".\Objects\lks07x_Project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -50,7 +54,7 @@ Package Vendor: Linko
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.5.0
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
